# gjk-rs

./: Cargo.toml  README.md  perf.data
benches/: bench_test_file.rs  gjk.rs  ncollide.rs
src/: gjk.rs  json_loder.rs  lib.rs
src/colliders/: mod.rs  random.rs  support_point.rs
tests/: collider.rs  test_file.rs
