[package]
name = "gjk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gjk"

[dependencies]
glam = "0.23"
serde_json = { version = "1.0", features = ["arbitrary_precision"]}
rand = "0.8"


[dev_dependencies]
criterion = { version = "0.4", features = ["html_reports"]}

[[bench]]
name = "bench_test_file"
harness = false